Fixed whitespace massacre

--- a/navigation.css
+++ b/navigation.css
@@ -1,26 +1,31 @@
-div#mainNavigationHeader {
-    position: absolute;
-    width: 200px;
-}
 
 div#mainNavigationMenu {
-    border: 1px solid black;
+    border: 1px solid black;
     position: absolute;
     width: 200px;
 }
 
-div#mainNavigationMenu ul {
-    padding-left: 5px;
-    list-style: none;
+div#mainNavigationMenu ul li {
+    padding-left: 500px;
+    list-style: none;
 }
 
 div#mainNavigationMenu li {
-    left: 0px;
-    display: block;
-    list-style: none;
+    left: 0px;
+    display: block;
+    list-style: none;
     margin-left: -15px;
 }
 
 div#mainNavigationMenu li:hover {
-    background-color: #E0E0FF;
+    background-color: #E0E0FF;
+}
+ 
+
+div#mainNavigationHeader {
+    position: absolute;
+    width: 200px;
+}
+
+div#mainNavigationContacts {
 }
